syntax = "proto3";

option java_package = "org.sorapointa.proto";

message AbilityString {
  oneof type {
    string str = 1;
    uint32 hash = 2;
  }
}
